# erlkoenig_rt

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
demo/: gateway.c  risk_scorer.c
docs/: ARCHITECTURE.md  GETTING_STARTED.md  HARDENING_TEST_PLAN.md
docs/findings/: finding_rt_strict_profile_pre_execve_open.md
include/: ek_protocol.h  erlkoenig_bpf.h  erlkoenig_buf.h  erlkoenig_caps.h  erlkoenig_cg.h  erlkoenig_cleanup.h  erlkoenig_cloned.h  erlkoenig_devfilter.h  erlkoenig_log.h  erlkoenig_metrics.h  erlkoenig_netcfg.h  erlkoenig_nft.h  erlkoenig_nodecert.h  erlkoenig_ns.h  erlkoenig_ns_internal.h  erlkoenig_probe.h  erlkoenig_proto.h  erlkoenig_seccomp.h  erlkoenig_tlv.h  erlkoenig_xdp.h  erlkoenig_xdp_api.h
scripts/: bench-startup.sh  install-release.sh  install.sh  test-erofs.sh
src/: ek_protocol.c  ek_rtctl.c  erlkoenig_cg.c  erlkoenig_cloned.c  erlkoenig_devfilter.c  erlkoenig_metrics.c  erlkoenig_netcfg.c  erlkoenig_nft.c  erlkoenig_nodecert.c  erlkoenig_ns.c  erlkoenig_rt.c  erlkoenig_xdp.c
test/: test_container_setup.c  test_metrics.c  test_metrics_live.c  test_metrics_showcase.c
test/boundary/: probe_caps__bounding_set_empty.c  probe_caps__dac_override_dropped.c  probe_caps__net_admin_dropped.c  probe_caps__sys_admin_dropped.c  probe_caps__sys_module_dropped.c  probe_caps__sys_ptrace_dropped.c  probe_cgroup__release_agent_absent.c  probe_cgroup__subtree_control_write_denied.c  probe_common.h  probe_fs__landlock_app_only.c  probe_fs__no_dev_kmsg.c  probe_fs__no_dev_mem.c  probe_fs__no_shell_binary.c  probe_fs__proc_kcore_masked.c  probe_fs__proc_keys_masked.c  probe_fs__proc_sysrq_trigger_masked.c  probe_mountns__remount_root_rw_killed.c  probe_netns__iface_count_bounded.c  probe_netns__no_packet_socket.c  probe_netns__no_raw_socket.c  probe_nnp__no_new_privs_set.c  probe_pidns__cannot_see_host_pids.c  probe_pidns__init_low_pid.c  probe_seccomp_default__bpf_killed.c  probe_seccomp_default__init_module_killed.c  probe_seccomp_default__io_uring_setup_killed.c  probe_seccomp_default__kexec_load_killed.c  probe_seccomp_default__keyctl_killed.c  probe_seccomp_default__mount_killed.c  probe_seccomp_default__perf_event_open_killed.c  probe_seccomp_default__pivot_root_killed.c  probe_seccomp_default__process_vm_readv_killed.c  probe_seccomp_default__ptrace_killed.c  probe_seccomp_default__reboot_killed.c  probe_seccomp_default__setns_killed.c  probe_seccomp_default__umount2_killed.c  probe_seccomp_default__unshare_killed.c  probe_seccomp_default__userfaultfd_killed.c  probe_seccomp_strict__bpf_killed.c  probe_seccomp_strict__fork_killed.c  (+5 more)
test/fault/: ek_fault_shim.c  ek_fault_sweep.sh  ek_path_sweep.sh
test/fuzz/: fuzz_kill_parser.c  fuzz_net_setup_parser.c  fuzz_resize_parser.c  fuzz_spawn_parser.c
testbin/: cpu_burner.c  crasher.c  disk_writer.c  echo_server.c  hello_output.c  landlock_check.c  mem_eater.c  proc_check.c  sleeper.c  stdin_echo.c  stdout_flood.c  syscall_fork.c  syscall_mount.c  syscall_write_rootfs.c
